[gd_scene load_steps=12 format=3 uid="uid://bfmfve1ki64va"]

[ext_resource type="Texture2D" uid="uid://dlhf4umvn470m" path="res://intro_page.png" id="1_5vw27"]
[ext_resource type="Script" uid="uid://bfja41ck0t85u" path="res://main.gd" id="1_kek77"]
[ext_resource type="Texture2D" uid="uid://j8vfluet6quo" path="res://layer_1.png" id="2_kek77"]
[ext_resource type="Texture2D" uid="uid://vuy2ww3xhfix" path="res://layer_2.png" id="3_4c57u"]
[ext_resource type="Texture2D" uid="uid://bmi0ts86eijs5" path="res://layer_3.png" id="4_efxa6"]
[ext_resource type="Texture2D" uid="uid://dopa278qvwhb1" path="res://layer_4.png" id="5_dg77c"]
[ext_resource type="Texture2D" uid="uid://c6pduxuujlc84" path="res://layer_5.png" id="6_ycdy4"]
[ext_resource type="Texture2D" uid="uid://b6fqttc0p6mq" path="res://layer_6.png" id="7_w48qg"]
[ext_resource type="Texture2D" uid="uid://bec24kky2ivig" path="res://layer_7.png" id="8_vivmo"]
[ext_resource type="Texture2D" uid="uid://birgtmd1wpkw0" path="res://OSI_names.png" id="10_efxa6"]
[ext_resource type="Texture2D" uid="uid://cqlalvpaebf1d" path="res://OSI_acronym.png" id="11_dg77c"]

[node name="Main" type="Node"]
script = ExtResource("1_kek77")

[node name="intro_page_Sprite2D" type="Sprite2D" parent="."]
z_index = 8
position = Vector2(576, 324)
scale = Vector2(0.55, 0.55)
texture = ExtResource("1_5vw27")

[node name="layer_1_Sprite2D" type="Sprite2D" parent="."]
z_index = 7
position = Vector2(576, 324)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_kek77")

[node name="layer_2_Sprite2D" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(576, 324)
scale = Vector2(12.5, 12.5)
texture = ExtResource("3_4c57u")

[node name="layer_3_Sprite2D" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(576, 324)
scale = Vector2(62.5, 62.5)
texture = ExtResource("4_efxa6")

[node name="layer_4_Sprite2D" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(576, 324)
scale = Vector2(312.5, 312.5)
texture = ExtResource("5_dg77c")

[node name="layer_5_Sprite2D" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(576, 324)
scale = Vector2(1562.5, 1562.5)
texture = ExtResource("6_ycdy4")

[node name="layer_6_Sprite2D" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(576, 324)
scale = Vector2(7812.5, 7812.5)
texture = ExtResource("7_w48qg")

[node name="layer_7_Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(576, 324)
scale = Vector2(39062.5, 39062.5)
texture = ExtResource("8_vivmo")

[node name="OSI_names_Sprite2D" type="Sprite2D" parent="."]
z_index = 9
position = Vector2(154, 324)
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_efxa6")

[node name="OSI_acronym_Sprite2D" type="Sprite2D" parent="."]
z_index = 9
position = Vector2(1030, 324)
scale = Vector2(0.1, 0.1)
texture = ExtResource("11_dg77c")
